fix Shake animation overflow

--- a/src/components/AboutMe/AboutMe.module.css
+++ b/src/components/AboutMe/AboutMe.module.css
@@ -10,10 +10,12 @@
     top: 0;
     display: flex;
     align-items: center;
+
+    overflow-x: hidden;
 }
 
 .AboutMe .Profile {
-    background: url("../../assets/images/profile.jpg");
+    background: url("../../assets/images/profile.jpeg");
     height: 250px;
     width: 250px;
     background-position: center;
@@ -162,7 +164,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    
+    overflow-x: hidden;
 }
 .AboutMe .RightSide h1 {
     font-size: 75px;
