--- a/src/components/Picture/Picture.module.css
+++ b/src/components/Picture/Picture.module.css
@@ -1,5 +1,5 @@
 .Picture {
-    background: url("../../assets/images/1.jpg");
+    background: url("../../assets/images/background.jpeg");
     background-repeat: no-repeat;
     height: 100vh;
     background-size: cover;
@@ -113,7 +113,7 @@
 
 @media (max-width: 1270px) {
     .Picture {
-        background: url("../../assets/images/1.jpg");
+        background: url("../../assets/images/background.jpeg");
         background-repeat: no-repeat;
         height: 100vh;
         background-size: cover;
@@ -122,7 +122,7 @@
 }
 @media (max-width: 693px) {
     .Picture {
-        background: url("../../assets/images/1.jpg");
+        background: url("../../assets/images/background.jpeg");
         background-repeat: no-repeat;
         height: 100vh;
         background-size: cover;
